--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/inigo/Downloads/sqlite-jdbc-3.36.0.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Prog3ExamenOrdinariaV7/sqlite-jdbc-3.7.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
